change image directory path

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,4 +8,4 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.servlet.multipart.max-file-size=50MB
 spring.servlet.multipart.max-request-size=50MB
 
-image.upload.dir=D:\\Java\\authorbook\\ImageUploadDir
+image.upload.dir=D:\\Java\\authorbook\\AuthorBook-master\\ImageUploadDir
